# py-keyring-proxy-cli

./: .bumpversion.cfg  .bumpversion.toml  README.md  pyproject.toml  taskfile.yml
src/keyring_proxy_cli/: __init__.py  __main__.py
