#:schema https://json.schemastore.org/pyproject.json

[project]
name = "keyring-proxy-cli"
version = "0.2.1.1"
description = "Keyring Proxy CLI"
authors = [{ name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }]
dependencies = [
    "keyring-proxy>=0.2.23",
    "typer>=0.12.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/KalleDK/py-keyring-proxy-cli"

[project.scripts]
keyring-proxy = "keyring_proxy_cli:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]

[tool.uv.sources]
keyring-proxy = { path = "../py-keyring-proxy" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tools = [
    "pyright>=1.1.391",
    "ruff>=0.8.6",
]
